# MQTT_TCP

./: CMakeLists.txt  README.md  main.c  mqtt_tcp
lib/: mqttlib.c  mqttlib.h
mqtt/: mqtt_client.c  mqtt_client.h  mqtt_message_create.c  mqtt_message_create.h
